--- a/boot-restaurant-api-service/pom.xml
+++ b/boot-restaurant-api-service/pom.xml
@@ -22,5 +22,22 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-entity</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-repo</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-dto</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+	
   </dependencies>
 </project>
