--- a/boot-restaurant-api-controller/pom.xml
+++ b/boot-restaurant-api-controller/pom.xml
@@ -15,7 +15,7 @@
   <dependencies>
 		<dependency>
 			<groupId>com.infogain.api</groupId>
-			<artifactId>boot-restaurant-api.entity</artifactId>
+			<artifactId>boot-restaurant-api-entity</artifactId>
 			<version>0.0.1</version>
 		</dependency>
 	</dependencies>
