--- a/boot-restaurant-api-runner/pom.xml
+++ b/boot-restaurant-api-runner/pom.xml
@@ -19,6 +19,15 @@
 			<artifactId>boot-restaurant-api-controller</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-entity</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		  <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 	</dependencies>
 	
 	<build>
