--- a/boot-restaurant-api-controller/pom.xml
+++ b/boot-restaurant-api-controller/pom.xml
@@ -15,8 +15,38 @@
   <dependencies>
 		<dependency>
 			<groupId>com.infogain.api</groupId>
-			<artifactId>boot-restaurant-api.entity</artifactId>
+			<artifactId>boot-restaurant-api-entity</artifactId>
 			<version>0.0.1</version>
+		</dependency>
+			<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-config</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+			<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-response</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-service</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 	</dependencies>
   
