--- a/boot-restaurant-api-dao/.project
+++ b/boot-restaurant-api-dao/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>boot-restaurant-api-repo</name>
+	<name>boot-restaurant-api-dao</name>
 	<comment></comment>
 	<projects>
 	</projects>
