--- a/boot-restaurant-api-dao/pom.xml
+++ b/boot-restaurant-api-dao/pom.xml
@@ -5,8 +5,18 @@
     <artifactId>boot-restaurant-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>boot-restaurant-api-repo</artifactId>
+  <artifactId>boot-restaurant-api-dao</artifactId>
   <version>0.0.1</version>
   <name>boot-restaurant-api</name>
   <description>boot-restaurant-api</description>
+  
+  <dependencies>
+  
+  <dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-entity</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+  
+  </dependencies>
 </project>
