--- a/boot-restaurant-api-runner/src/main/resources/application.properties
+++ b/boot-restaurant-api-runner/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-server.port = 8081
+
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+spring.datasource.url=jdbc:mysql://localhost/log
+spring.datasource.username=root
+spring.datasource.password=info123!
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+server.port=8083
+
+ 
+ spring.redis.host=localhost
+ spring.redis.port=6379
+ spring.cache.type=redis
+ 
+ # Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = create
