--- a/boot-restaurant-api-service/pom.xml
+++ b/boot-restaurant-api-service/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
@@ -22,5 +22,34 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+   	<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-config</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-entity</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-service</artifactId>
+			<version>0.0.1</version>
+		</dependency> -->
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-dto</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-dao</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
   </dependencies>
 </project>
