--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
 		<module>boot-restaurant-api-repo</module>
 		<module>boot-restaurant-api-dto</module>
 		<module>boot-restaurant-api-service</module>
+		<module>boot-restaurant-api-response</module>
+		<module>boot-restaurant-api-config</module>
+		<module>boot-restaurant-api-dao</module>
 	</modules>
 	
 
