coupon first commit

--- a/boot-restaurant-api-controller/pom.xml
+++ b/boot-restaurant-api-controller/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-    <groupId>com.infogain.api</groupId>
+    <groupId>com.infogain.api</groupId>						
     <artifactId>boot-restaurant-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -15,8 +15,18 @@
   <dependencies>
 		<dependency>
 			<groupId>com.infogain.api</groupId>
-			<artifactId>boot-restaurant-api.entity</artifactId>
+			<artifactId>boot-restaurant-api-entity</artifactId>
 			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			 <artifactId>boot-restaurant-api-service</artifactId>
+ 			 <version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-ExceptionHandler</artifactId>
+ 			 <version>0.0.1</version>
 		</dependency>
 	</dependencies>
   
