--- a/boot-restaurant-api-runner/src/main/resources/application.properties
+++ b/boot-restaurant-api-runner/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-<<<<<<< HEAD
+
 
 #spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-spring.datasource.url=jdbc:mysql://localhost/log
+spring.datasource.url=jdbc:mysql://localhost/my_log
 spring.datasource.username=root
 spring.datasource.password=info123!
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -16,12 +16,11 @@ server.port=8083
  spring.cache.type=redis
  
  # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
-=======
-spring.datasource.url=jdbc:mysql://localhost/my_db
-spring.datasource.username=root
-spring.datasource.password=info123!
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-server.port=8083
-spring.jpa.hibernate.ddl-auto=update
->>>>>>> shubh
+spring.jpa.hibernate.ddl-auto =update
+
+#spring.datasource.url=jdbc:mysql://localhost/my_db
+#spring.datasource.password=info123!
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#server.port=8083
+#spring.jpa.hibernate.ddl-auto=update
+
