--- a/boot-restaurant-api-runner/src/main/resources/application.properties
+++ b/boot-restaurant-api-runner/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=info123!
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 server.port=8083
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
