--- a/boot-restaurant-api-controller/pom.xml
+++ b/boot-restaurant-api-controller/pom.xml
@@ -13,6 +13,22 @@
   <description>boot-restaurant-api-controller</description>
   
   <dependencies>
+  <dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-all</artifactId>
+    <version>1.3</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+<dependency>
+    <groupId>commons-logging</groupId>
+    <artifactId>commons-logging</artifactId>
+    <version>1.2</version>
+</dependency>
 		<dependency>
 			<groupId>com.infogain.api</groupId>
 			<artifactId>boot-restaurant-api-entity</artifactId>
