--- a/boot-restaurant-api-runner/pom.xml
+++ b/boot-restaurant-api-runner/pom.xml
@@ -14,6 +14,11 @@
 	<description>boot-restaurant-api-runner</description>
 
 	<dependencies>
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.infogain.api</groupId>
 			<artifactId>boot-restaurant-api-controller</artifactId>
