--- a/boot-restaurant-api-service/pom.xml
+++ b/boot-restaurant-api-service/pom.xml
@@ -17,13 +17,21 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<!-- <dependency> <groupId>junit</groupId> <artifactId>junit</artifactId> 
+			<version>3.8</version> <scope>test</scope> </dependency> -->
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8</version>
+			<version>4.11</version><!--$NO-MVN-MAN-VER$-->
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.infogain.api</groupId>
 			<artifactId>boot-restaurant-api-config</artifactId>
@@ -51,9 +59,9 @@
 			<artifactId>boot-restaurant-api-repo</artifactId>
 			<version>0.0.1</version>
 		</dependency>
-		
 
-		
+
+
 		<dependency>
 			<groupId>com.infogain.api</groupId>
 			<artifactId>boot-restaurant-api-dao</artifactId>
@@ -64,9 +72,9 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
-		<groupId>com.infogain.api</groupId>
+			<groupId>com.infogain.api</groupId>
 			<artifactId>boot-restaurant-api-dto</artifactId>
-		
+
 			<version>0.0.1</version>
 		</dependency>
 
