--- a/boot-restaurant-api-dao/pom.xml
+++ b/boot-restaurant-api-dao/pom.xml
@@ -5,29 +5,16 @@
     <artifactId>boot-restaurant-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>boot-restaurant-api-config</artifactId>
+  <artifactId>boot-restaurant-api-dao</artifactId>
   <version>0.0.1</version>
   <name>boot-restaurant-api</name>
   <description>boot-restaurant-api</description>
-  	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-
-		<dependency>
+  <dependencies>
+  <dependency>
 			<groupId>com.infogain.api</groupId>
 			<artifactId>boot-restaurant-api-entity</artifactId>
 			<version>0.0.1</version>
 		</dependency>
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.7.0</version>
-		</dependency>
-	</dependencies>
+  
+  </dependencies>
 </project>
