--- a/boot-restaurant-api-dto/pom.xml
+++ b/boot-restaurant-api-dto/pom.xml
@@ -22,5 +22,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.4</version>
+			<scope>provided</scope>
+		</dependency>
   </dependencies>
 </project>
