--- a/boot-restaurant-api-runner/src/main/resources/application.properties
+++ b/boot-restaurant-api-runner/src/main/resources/application.properties
@@ -1,7 +1,30 @@
-spring.datasource.url=jdbc:mysql://localhost/my_db
+
+
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+spring.datasource.url=jdbc:mysql://localhost/my_log
 spring.datasource.username=root
 spring.datasource.password=info123!
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
 server.port=8083
+
+ 
+ spring.redis.host=localhost
+ spring.redis.port=6379
+ spring.cache.type=redis
+ 
+ # Hibernate ddl auto (create, create-drop, validate, update)
+
+
+#spring.datasource.url=jdbc:mysql://localhost/my_db
+#spring.datasource.password=info123!
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#server.port=8083
+#spring.jpa.hibernate.ddl-auto=update
+
+
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
