--- a/boot-restaurant-api-service/pom.xml
+++ b/boot-restaurant-api-service/pom.xml
@@ -68,7 +68,12 @@
 			<version>0.0.1</version>
 		</dependency>
 
+<dependency>
+			<groupId>com.infogain.api</groupId>
 
+			<artifactId>boot-restaurant-api-config</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.infogain.api</groupId>
