--- a/boot-restaurant-api-ExceptionHandler/pom.xml
+++ b/boot-restaurant-api-ExceptionHandler/pom.xml
@@ -7,10 +7,9 @@
     <artifactId>boot-restaurant-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.infogain.api</groupId>
-  <artifactId>boot-restaurant-api-dto</artifactId>
+  <artifactId>boot-restaurant-api-ExceptionHandler</artifactId>
   <version>0.0.1</version>
-  <name>boot-restaurant-api-dto</name>
+  <name>boot-restaurant-api-ExceptionHandler</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,15 +18,9 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
     
-     <!-- <dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.4</version>
-			<scope>provided</scope>
-		</dependency> -->
+   
   </dependencies>
 </project>
