--- a/boot-restaurant-api-controller/pom.xml
+++ b/boot-restaurant-api-controller/pom.xml
@@ -54,9 +54,16 @@
 		</dependency>
 		<dependency>
 			<groupId>com.infogain.api</groupId>
+			<artifactId>boot-restaurant-api-ExceptionHandler</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.infogain.api</groupId>
 			<artifactId>boot-restaurant-api-response</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.infogain.api</groupId>
 			<artifactId>boot-restaurant-api-config</artifactId>
