--- a/boot-restaurant-api-runner/src/main/resources/application.properties
+++ b/boot-restaurant-api-runner/src/main/resources/application.properties
@@ -28,3 +28,11 @@ server.port=8083
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+#log4j.rootLogger = INFO
+#log4j.appender.INFO = org.apache.log4j.DailyRollingFileAppender
+#spring.main.banner-mode=off
+logging.file=/abcd/ab.log
+
+#log4j.appender.INFO.Append = true
+#log4j.appender.INFO.Threshold = INFO
+#log4j.appender.INFO.layout = org.apache.log4j.PatternLayout
